# Robot-Speed-Control-ros2

./: .gitignore  README.md  requirements.txt  ros_packages.txt
realsense-ros/realsense2_camera/scripts/: align_depth_to_color_ros2.py  depth_distance_seg_ros2.py
realsense-ros/realsense2_description/urdf/: _d435.urdf.xacro
ros2_robotiq_gripper/robotiq_description/urdf/: robotiq_2f_85_gripper.urdf.xacro
ur_gripper_gazebo/: package.xml  setup.cfg  setup.py
ur_gripper_gazebo/config/: ur3e_robotiq_controllers.yaml
ur_gripper_gazebo/launch/: sim.launch.py  ur3e_robotiq_gazebo.launch.py
ur_gripper_gazebo/urdf/: d435_camera.xacro  ur3e_robotiq_2f_85_urdf.xacro
ur_gripper_gazebo/worlds/: IRAC_2.world  IRAC_ros2.world
ur_robotiq/ur_robotiq_description/urdf/: robotiq_2f_85_urdf.xacro  ur3e_robotiq_2f_85_urdf.xacro
ur_robotiq_moveit_config/: .setup_assistant  package.xml
ur_robotiq_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur3e_robotiq.srdf
ur_robotiq_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_robotiq_moveit_config/scripts/: pick_place.py  pick_place_demo.py
yolov5/: detect.py
yolov5/segment/: predict.py
yolov5/utils/: dataloaders.py
